Mejora en Factories de Forma para que no pasen todas las formas por aqui